# doorctl

./: .gitignore  README.md  doorctl.cabal  example.dhall  figlet  flake.nix  id_ed25519  id_ed25519.pub  package.yaml  stack.yaml
doorctl/: Main.hs
nix/: base.nix
nixos/: configuration.nix  flake.nix
service/: doorctl.service
src/: Api.hs  Config.hs  Exit.hs  GPIO.hs  Log.hs  Reader.hs  Tags.hs  Watchdog.hs  Web.hs
